fix(): Feedback box font sizes changes; Content alignment

--- a/src/_sass/_variables.scss
+++ b/src/_sass/_variables.scss
@@ -82,6 +82,8 @@ $waffle-sizes: (
   small: 0.3rem,
   medium: 0.5rem,
   large: 1rem,
+  xlarge: 1.5rem,
+  xxlarge: 3rem,
 ) !default;
 
 /// Default gutter size.
